--- a/index.html
+++ b/index.html
@@ -3,12 +3,69 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Hello, world!</title>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.4/tailwind.min.css' />
+  <link rel="stylesheet" href="styles/007.css">
+  <link rel="shortcut icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/325/upside-down-face_1f643.png" type="image/x-icon">
+    <title>{Name}</title>
   </head>
-  <body>
-    <h1>Hello, world!</h1>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  </body>
+  <body class="padding: 0rem;">
+    <div class="xp_profile">
+        <span class="xp_profile_bg"></span>
+        <span id="userAvatar"></span>
+        <div class="xp_profile_name">
+          <p id="username"></p>
+          <p id="description"></p>
+          <div class="xp_gradient_bar"></div>
+        </div>
+    </div>
+    <div class="list">
+        <!-- Link 1 -->
+        <a>
+            <div class='card' onclick='window.open("https://xat.com")'>
+                <div style='display: flex;'>
+                    <img src='https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/325/anger-symbol_1f4a2.png' class='card-img' draggable=false>
+                    <span class='card-title'>Link 1</span>
+                </div>
+                <p class='card-desc'>
+                    Description. Or whatever you want.
+                </p>
+                <p class='card-footer'>
+                    Card footer.
+                </p>
+            </div>
+        </a>
+        <!-- Link 2 -->
+        <a>
+            <div class='card' onclick='window.open("https://xat.com")'>
+                <div style='display: flex;'>
+                    <img src='https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/325/anger-symbol_1f4a2.png' class='card-img' draggable=false>
+                    <span class='card-title'>Link 1</span>
+                </div>
+                <p class='card-desc'>
+                    Description. Or whatever you want.
+                </p>
+                <p class='card-footer'>
+                    Card footer.
+                </p>
+            </div>
+        </a>
+        <!-- Link 3 -->
+        <a>
+            <div class='card' onclick='window.open("https://xat.com")'>
+                <div style='display: flex;'>
+                    <img src='https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/325/anger-symbol_1f4a2.png' class='card-img' draggable=false>
+                    <span class='card-title'>Link 1</span>
+                </div>
+                <p class='card-desc'>
+                    Description. Or whatever you want.
+                </p>
+                <p class='card-footer'>
+                    Card footer.
+                </p>
+            </div>
+        </a>
+        <br>
+    </div>
+    <script src="xss/xss.js"></script>
+</body>
 </html>
